[gd_scene load_steps=9 format=3 uid="uid://lx17th5tw38f"]

[ext_resource type="Script" uid="uid://b36aty3kmcble" path="res://Scripts/Tensor/tensor_collection_display.gd" id="1_6bsox"]
[ext_resource type="PackedScene" uid="uid://bav80rv2du2x2" path="res://Scripts/Tensor/TensorCollectionEntry.tscn" id="2_8jyjq"]
[ext_resource type="Script" uid="uid://b5n2cu14u0eb6" path="res://Scripts/Tensor/tensor_api.gd" id="3_tefep"]
[ext_resource type="Theme" uid="uid://ds48g7imsbnvb" path="res://RubyCorpTheme.tres" id="4_ixmf5"]
[ext_resource type="Texture2D" uid="uid://bdjw50vivwoew" path="res://Textures/Icons/CloseIcon.PNG" id="5_yb2aa"]
[ext_resource type="Script" uid="uid://cja6e8dxjd81x" path="res://addons/SolanaSDK/Scripts/Utility/Input/input_field.gd" id="6_8epwe"]
[ext_resource type="Texture2D" uid="uid://mwxd7sxmvxmf" path="res://Textures/LogosAndTokens/tensorlogo.png" id="7_e05jc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb2aa"]
bg_color = Color(0, 0.443137, 0.439216, 1)

[node name="TensorCollectionDisplay" type="Control" node_paths=PackedStringArray("tensor_api", "container", "no_asset_overlay", "search_bar", "search_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6bsox")
tensor_api = NodePath("TensorAPI")
show_limit = 10
container = NodePath("MarginContainer/Content/Panel/MarginContainer/VBoxContainer/ScrollContainer/CollectionContainer")
no_asset_overlay = NodePath("MarginContainer/Content/Panel/MarginContainer/NoAssetsOverlay")
display_entry_scn = ExtResource("2_8jyjq")
search_bar = NodePath("MarginContainer/Content/Panel/MarginContainer/VBoxContainer/Searchbar/Searchbar")
search_button = NodePath("MarginContainer/Content/Panel/MarginContainer/VBoxContainer/Searchbar/SearchButton")
close_on_select = true

[node name="TensorAPI" type="Node" parent="."]
script = ExtResource("3_tefep")
API_KEY = "8af09011-d26f-4002-9bd3-130e569c5176"

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ixmf5")
theme_override_styles/panel = SubResource("StyleBoxFlat_yb2aa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Info" type="HBoxContainer" parent="MarginContainer/Content"]
layout_mode = 2

[node name="SelectCollection" type="Label" parent="MarginContainer/Content/Info"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("4_ixmf5")
theme_type_variation = &"HeaderMedium"
text = "SELECT COLLECTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="HBoxContainer" parent="MarginContainer/Content/Info"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CloseButton" type="TextureButton" parent="MarginContainer/Content/Info/Close"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("5_yb2aa")
texture_pressed = ExtResource("5_yb2aa")
texture_hover = ExtResource("5_yb2aa")
texture_disabled = ExtResource("5_yb2aa")
ignore_texture_size = true
stretch_mode = 4

[node name="Panel" type="PanelContainer" parent="MarginContainer/Content"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme = ExtResource("4_ixmf5")
theme_type_variation = &"PanelFlat"

[node name="Exit" type="Control" parent="MarginContainer/Content/Panel"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Content/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Searchbar" type="HBoxContainer" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Searchbar" type="LineEdit" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/Searchbar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_ixmf5")
placeholder_text = "Search for collection..."
script = ExtResource("6_8epwe")

[node name="SearchButton" type="Button" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/Searchbar"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme = ExtResource("4_ixmf5")
theme_type_variation = &"ButtonFlatAlt"
text = "SEARCH"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CollectionContainer" type="VBoxContainer" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TensorCollectionEntry" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/ScrollContainer/CollectionContainer" instance=ExtResource("2_8jyjq")]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PoweredBy" type="HBoxContainer" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BalanceLabel" type="Label" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/PoweredBy"]
layout_mode = 2
theme = ExtResource("4_ixmf5")
theme_override_font_sizes/font_size = 24
text = "Powered by Tensor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Content/Panel/MarginContainer/VBoxContainer/PoweredBy"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_e05jc")
expand_mode = 3
stretch_mode = 5

[node name="NoAssetsOverlay" type="CenterContainer" parent="MarginContainer/Content/Panel/MarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Content/Panel/MarginContainer/NoAssetsOverlay"]
layout_mode = 2
theme = ExtResource("4_ixmf5")
text = "No collections found..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Content/Info/Close/CloseButton" to="." method="close"]
